--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases labs",
-  "repository": "https://github.com/stbestichhh/db_project-manager",
-  "author": "Kiril Yakymchuk <stbestich@gmail.com>",
+  "repository": "https://github.com/Max-Homishchak/db_project-manager-Maksym-Khomishchak",
+  "author": "Maksym Khomishchak <maksymhomisak813@gmail.com>",
   "license": "ECL 2.0",
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
